--- a/javascript_tko/js_game_udemy/main.css
+++ b/javascript_tko/js_game_udemy/main.css
@@ -1,10 +1,12 @@
 * {
   padding: 0;
   margin: 0;
+  background: black;
 }
 
 #myCanvas {
-  background: #eee;
+  background: #fffbc6;
   display: block;
   margin: 0 auto;
+  margin-top: 50px;
 }
